refactor(console)!: rename web development interfaces
