# server/openapi.go
@@ -17,10 +17,10 @@ import (
 const openAPIVersion = "0.0.0"
 
 type rootResponse struct {
-	Name   string `json:"name"`
-	Status string `json:"status"`
-	Health string `json:"health"`
-	Web    string `json:"web"`
+	Name    string `json:"name"`
+	Status  string `json:"status"`
+	Health  string `json:"health"`
+	Console string `json:"console"`
 }
 
 type providerOAuthRequest struct {
